--- a/second_weekend/Cargo.toml
+++ b/second_weekend/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+image = "0.23.14"
 lazy_static = "1.4.0"
 ordered-float = "2.1.1"
 rand = "0.8.3"
